--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -28,8 +28,8 @@
         "# Section 1 — Setup (clone + install)\n",
         "#\n",
         "# In Colab, edit these two values to point at your repo.\n",
-        "GITHUB_REPO = \"https://github.com/<YOUR_GITHUB_USERNAME>/<YOUR_REPO>.git\"\n",
-        "REPO_DIR = \"<YOUR_REPO>\"\n",
+        "GITHUB_REPO = \"https://github.com/andres-troiano/menu-qa-chatbot.git\"\n",
+        "REPO_DIR = \"menu-qa-chatbot\"\n",
         "\n",
         "!git clone $GITHUB_REPO\n",
         "%cd $REPO_DIR\n",
