--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -34,9 +34,9 @@
         "!git clone $GITHUB_REPO\n",
         "%cd $REPO_DIR\n",
         "\n",
-        "# Install uv (fast Python package manager), then install deps.\n",
+        "# Install deps into the *current notebook Python* (so imports work).\n",
         "!pip -q install -U uv\n",
-        "!uv sync\n"
+        "!uv pip install --system -e .\n"
       ]
     },
     {
