--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -80,6 +80,9 @@
         "]\n",
         "\n",
         "for q in questions:\n",
+        "    rr = route(q)\n",
+        "    print(q, \"=>\", rr.meta)\n",
+        "\n",
         "    print(\"Q:\", q)\n",
         "    print(\"A:\", answer(q, index))\n",
         "    print(\"-\" * 80)\n"
@@ -166,6 +169,9 @@
         "]\n",
         "\n",
         "for q in questions:\n",
+        "    rr = route(q)\n",
+        "    print(q, \"=>\", rr.meta)\n",
+        "    \n",
         "    print(\"Q:\", q)\n",
         "    print(\"A:\", answer(q, index))\n",
         "    print(\"-\" * 80)\n"
