--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -73,16 +73,33 @@
         "from src.chat import answer\n",
         "\n",
         "questions = [\n",
-        "    \"Which salads do you have?\",\n",
-        "    \"How many calories does the GO GREEN smoothie have?\",\n",
+        "    # Price Lookup\n",
         "    \"What is the price of a small NUTTY BOWL?\",\n",
+        "    \"How much is the ACAI ELIXIR?\",\n",
+        "    \"How much is the GREEN BOWL Large?\",\n",
+        "\n",
+        "    # Nutrition Lookup\n",
+        "    \"How many calories does the GO GREEN smoothie have?\",\n",
+        "    \"Calories for Dragon Smoothie\",\n",
+        "\n",
+        "    # Category Listing\n",
+        "    \"Which salads do you have?\",\n",
+        "    \"What bowls are available?\",\n",
+        "    \"Show me smoothies\",\n",
+        "\n",
+        "    # Discount Listing\n",
         "    \"What discounts are available?\",\n",
+        "    \"Which discounts include coupons?\",\n",
+        "\n",
+        "    # Discount Trigger Query\n",
+        "    \"What items trigger BOGO Any Smoothie discount?\",\n",
+        "\n",
+        "    # Cross-Channel Price Comparison\n",
+        "    \"Is the price for Smoothie - ACAI ELIXIR the same in all channels?\",\n",
+        "\n",
         "]\n",
         "\n",
         "for q in questions:\n",
-        "    rr = route(q)\n",
-        "    print(q, \"=>\", rr.meta)\n",
-        "\n",
         "    print(\"Q:\", q)\n",
         "    print(\"A:\", answer(q, index))\n",
         "    print(\"-\" * 80)\n"
