fix: discount resolution edge cases

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -20,31 +20,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "392553a3",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Notebook Python: 3.11.14\n",
+            "Repo root: /Users/andrestroiano/code/personal/qu-challenge\n"
+          ]
+        }
+      ],
       "source": [
-        "# Section 1 — Setup (clone + install)\n",
+        "# Section 1 — Setup (local + Colab)\n",
         "#\n",
-        "# In Colab, edit these two values to point at your repo.\n",
-        "GITHUB_REPO = \"https://github.com/andres-troiano/menu-qa-chatbot.git\"\n",
-        "REPO_DIR = \"menu-qa-chatbot\"\n",
+        "# By default, this cell sets up imports for *local* Jupyter.\n",
+        "# If you're running in Colab, flip RUN_COLAB_SETUP=True.\n",
         "\n",
-        "!git clone $GITHUB_REPO\n",
-        "%cd $REPO_DIR\n",
+        "import os\n",
+        "import sys\n",
+        "from pathlib import Path\n",
         "\n",
-        "# Install deps into the *current notebook Python* (so imports work).\n",
-        "!pip -q install -U uv\n",
-        "!uv pip install --system -e .\n"
+        "RUN_COLAB_SETUP = False\n",
+        "\n",
+        "if RUN_COLAB_SETUP:\n",
+        "    # --- Colab setup ---\n",
+        "    GITHUB_REPO = \"https://github.com/<YOUR_GITHUB_USERNAME>/<YOUR_REPO>.git\"\n",
+        "    REPO_DIR = \"<YOUR_REPO>\"\n",
+        "\n",
+        "    !git clone $GITHUB_REPO\n",
+        "    %cd $REPO_DIR\n",
+        "\n",
+        "    # Install deps into the *current notebook Python* (so imports work)\n",
+        "    !python -m pip -q install -U uv\n",
+        "    !uv pip install --system -e .\n",
+        "else:\n",
+        "    # --- Local Jupyter setup ---\n",
+        "    # Ensure we run from the repo root and can `import src`.\n",
+        "    repo_root = Path.cwd().resolve()\n",
+        "    if repo_root.name == \"notebooks\":\n",
+        "        repo_root = repo_root.parent\n",
+        "\n",
+        "    os.chdir(repo_root)\n",
+        "    if str(repo_root) not in sys.path:\n",
+        "        sys.path.insert(0, str(repo_root))\n",
+        "\n",
+        "    print(\"Notebook Python:\", sys.version.split()[0])\n",
+        "    print(\"Repo root:\", repo_root)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "e610bcd2",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'total_items': 46,\n",
+              " 'total_categories': 7,\n",
+              " 'total_discounts': 9,\n",
+              " 'has_channel_pricing': False,\n",
+              " 'notes': ['No channel-specific price overrides detected in dataset']}"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Section 2 — Load the menu index (Bootstrap)\n",
         "from src.bootstrap import load_index_with_summary\n",
@@ -65,10 +112,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "37e1f73c",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q: What is the price of a small NUTTY BOWL?\n",
+            "A: $11.99 — NUTTY BOWL (Small)\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: How much is the ACAI ELIXIR?\n",
+            "A: $8.49 — ACAI ELIXIR\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: How much is the GREEN BOWL Large?\n",
+            "A: $15.99 — GREEN BOWL (Large)\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: How many calories does the GO GREEN smoothie have?\n",
+            "A: GO GREEN: 240 calories\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: Calories for Dragon Smoothie\n",
+            "A: DRAGON SMOOTHIE: 250 calories\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: Which salads do you have?\n",
+            "A: Salads (5 items): Chimichurri Steak & Pot Bowl, Green Glow Bowl, MIGHTY MED SALAD, Power Pesto Chicken Bowl, Supergreen Goddess Salad\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: What bowls are available?\n",
+            "A: Bowls (7 items): DESSERT BOWL, DRAGON BOWL, GREEN BOWL, NUTTY BOWL, SUPERFOOD BOWL, TROPICAL BOWL, WARRIOR BOWL\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: Show me smoothies\n",
+            "A: Smoothies (8 items): ACAI ELIXIR, DRAGON SMOOTHIE, GO GREEN, KID SUNSATION, MATCHA MADNESS, TEMPTATION, TROPICAL PARADISE, WHEY GREEN\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: What discounts are available?\n",
+            "A: Discounts (9): $1 OFF any Bowl or Smoothie, $3.00 Off LG Bowl, 2 SM Bowls for $20, BOGO 50% off Wrap or Salad, BOGO Any Smoothie, Loyalty Discount, Military/Police Discount, Open Discount, Veteran Day Smoothie\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: Which discounts include coupons?\n",
+            "A: Discounts with coupons (3): $3.00 Off LG Bowl, Military/Police Discount, Open Discount\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: What items trigger BOGO Any Smoothie discount?\n",
+            "A: BOGO Any Smoothie triggers: ACAI ELIXIR, DRAGON SMOOTHIE, GO GREEN, KID SUNSATION, MATCHA MADNESS, TEMPTATION, TROPICAL PARADISE, WHEY GREEN\n",
+            "--------------------------------------------------------------------------------\n",
+            "Q: Is the price for Smoothie - ACAI ELIXIR the same in all channels?\n",
+            "A: This dataset does not include channel-specific pricing overrides.\n",
+            "--------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "from src.chat import answer\n",
         "\n",
@@ -119,13 +209,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "3154021d",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "OPENAI_API_KEY present: True\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "\n",
+        "key_present = bool(os.getenv(\"OPENAI_API_KEY\"))\n",
+        "print(\"OPENAI_API_KEY present:\", key_present)\n",
+        "\n",
+        "if RUN_COLAB_SETUP and not key_present:\n",
+        "    print(\n",
+        "        \"\\nYou're in Colab mode and OPENAI_API_KEY isn't set.\\n\"\n",
+        "        \"Paste your key by uncommenting the line below.\\n\"\n",
+        "    )\n",
+        "\n",
+        "# If you want to provide a key manually (Colab), uncomment:\n",
         "# os.environ[\"OPENAI_API_KEY\"] = \"PASTE_YOUR_KEY_HERE\"\n",
         "\n",
         "# Optional: override router model\n",
@@ -146,10 +254,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "908a3960",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "RouteResult(route=RouterOutput(intent='get_price', item='NUTTY BOWL', portion='small', category=None, discount=None, channel=None), meta=RouteMeta(router='llm', reason=None, model='gpt-4o-mini', error_type=None, error_message=None))"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "from src.router import route\n",
         "\n",
@@ -173,18 +292,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "d1285e1c",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "What is the price of a small NUTTY BOWL? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: What is the price of a small NUTTY BOWL?\n",
+            "A: $11.99 — NUTTY BOWL (Small)\n",
+            "--------------------------------------------------------------------------------\n",
+            "How much is the ACAI ELIXIR? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: How much is the ACAI ELIXIR?\n",
+            "A: $8.49 — ACAI ELIXIR\n",
+            "--------------------------------------------------------------------------------\n",
+            "How much is the GREEN BOWL Large? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: How much is the GREEN BOWL Large?\n",
+            "A: $15.99 — GREEN BOWL (Large)\n",
+            "--------------------------------------------------------------------------------\n",
+            "How many calories does the GO GREEN smoothie have? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: How many calories does the GO GREEN smoothie have?\n",
+            "A: GO GREEN: 240 calories\n",
+            "--------------------------------------------------------------------------------\n",
+            "Calories for Dragon Smoothie => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: Calories for Dragon Smoothie\n",
+            "A: DRAGON SMOOTHIE: 250 calories\n",
+            "--------------------------------------------------------------------------------\n",
+            "Which salads do you have? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: Which salads do you have?\n",
+            "A: Salads (5 items): Chimichurri Steak & Pot Bowl, Green Glow Bowl, MIGHTY MED SALAD, Power Pesto Chicken Bowl, Supergreen Goddess Salad\n",
+            "--------------------------------------------------------------------------------\n",
+            "What bowls are available? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: What bowls are available?\n",
+            "A: Bowls (7 items): DESSERT BOWL, DRAGON BOWL, GREEN BOWL, NUTTY BOWL, SUPERFOOD BOWL, TROPICAL BOWL, WARRIOR BOWL\n",
+            "--------------------------------------------------------------------------------\n",
+            "Show me smoothies => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: Show me smoothies\n",
+            "A: Smoothies (8 items): ACAI ELIXIR, DRAGON SMOOTHIE, GO GREEN, KID SUNSATION, MATCHA MADNESS, TEMPTATION, TROPICAL PARADISE, WHEY GREEN\n",
+            "--------------------------------------------------------------------------------\n",
+            "What discounts are available? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: What discounts are available?\n",
+            "A: Discounts (9): $1 OFF any Bowl or Smoothie, $3.00 Off LG Bowl, 2 SM Bowls for $20, BOGO 50% off Wrap or Salad, BOGO Any Smoothie, Loyalty Discount, Military/Police Discount, Open Discount, Veteran Day Smoothie\n",
+            "--------------------------------------------------------------------------------\n",
+            "Which discounts include coupons? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: Which discounts include coupons?\n",
+            "A: Discounts with coupons (3): $3.00 Off LG Bowl, Military/Police Discount, Open Discount\n",
+            "--------------------------------------------------------------------------------\n",
+            "What items trigger BOGO Any Smoothie discount? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: What items trigger BOGO Any Smoothie discount?\n",
+            "A: BOGO Any Smoothie triggers: ACAI ELIXIR, DRAGON SMOOTHIE, GO GREEN, KID SUNSATION, MATCHA MADNESS, TEMPTATION, TROPICAL PARADISE, WHEY GREEN\n",
+            "--------------------------------------------------------------------------------\n",
+            "Is the price for Smoothie - ACAI ELIXIR the same in all channels? => router='llm' reason=None model='gpt-4o-mini' error_type=None error_message=None\n",
+            "Q: Is the price for Smoothie - ACAI ELIXIR the same in all channels?\n",
+            "A: This dataset does not include channel-specific pricing overrides.\n",
+            "--------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
-        "questions = [\n",
-        "    \"How much is the nutty bowl if I get the small one?\",\n",
-        "    \"Do you have any salads?\",\n",
-        "    \"Is the price for Smoothie - ACAI ELIXIR the same in all channels?\",\n",
-        "    \"What items trigger a BOGO Any Smoothie discount?\",\n",
-        "]\n",
-        "\n",
         "for q in questions:\n",
         "    rr = route(q)\n",
         "    print(q, \"=>\", rr.meta)\n",
@@ -209,7 +376,16 @@
       "execution_count": null,
       "id": "029b77a7",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "GO GREEN: 240 calories\n",
+            "Salads (5 items): Chimichurri Steak & Pot Bowl, Green Glow Bowl, MIGHTY MED SALAD, Power Pesto Chicken Bowl, Supergreen Goddess Salad\n"
+          ]
+        }
+      ],
       "source": [
         "while True:\n",
         "    q = input(\"Ask a menu question (or 'exit'): \").strip()\n",
@@ -217,17 +393,33 @@
         "        break\n",
         "    print(answer(q, index))\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b3140dfa",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "menu-chatbot (.venv)",
       "language": "python",
-      "name": "python3"
+      "name": "menu-chatbot"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.14"
     }
   },
   "nbformat": 4,
