feat: add debug traces

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -28,8 +28,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Notebook Python: 3.11.14\n",
-            "Repo root: /Users/andrestroiano/code/personal/qu-challenge\n"
+            "Notebook Python: 3.11.14\n"
           ]
         }
       ],
@@ -47,8 +46,8 @@
         "\n",
         "if RUN_COLAB_SETUP:\n",
         "    # --- Colab setup ---\n",
-        "    GITHUB_REPO = \"https://github.com/<YOUR_GITHUB_USERNAME>/<YOUR_REPO>.git\"\n",
-        "    REPO_DIR = \"<YOUR_REPO>\"\n",
+        "    GITHUB_REPO = \"https://github.com/andres-troiano/menu-qa-chatbot.git\"\n",
+        "    REPO_DIR = \"menu-qa-chatbot\"\n",
         "\n",
         "    !git clone $GITHUB_REPO\n",
         "    %cd $REPO_DIR\n",
@@ -68,7 +67,7 @@
         "        sys.path.insert(0, str(repo_root))\n",
         "\n",
         "    print(\"Notebook Python:\", sys.version.split()[0])\n",
-        "    print(\"Repo root:\", repo_root)\n"
+        "    #print(\"Repo root:\", repo_root)\n"
       ]
     },
     {
@@ -113,6 +112,42 @@
     {
       "cell_type": "code",
       "execution_count": 3,
+      "id": "acdd3266",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from src.chat import answer\n",
+        "\n",
+        "questions = [\n",
+        "    # Price Lookup\n",
+        "    \"What is the price of a small NUTTY BOWL?\",\n",
+        "    \"How much is the ACAI ELIXIR?\",\n",
+        "    \"How much is the GREEN BOWL Large?\",\n",
+        "\n",
+        "    # Nutrition Lookup\n",
+        "    \"How many calories does the GO GREEN smoothie have?\",\n",
+        "    \"Calories for Dragon Smoothie\",\n",
+        "\n",
+        "    # Category Listing\n",
+        "    \"Which salads do you have?\",\n",
+        "    \"What bowls are available?\",\n",
+        "    \"Show me smoothies\",\n",
+        "\n",
+        "    # Discount Listing\n",
+        "    \"What discounts are available?\",\n",
+        "    \"Which discounts include coupons?\",\n",
+        "\n",
+        "    # Discount Trigger Query\n",
+        "    \"What items trigger BOGO Any Smoothie discount?\",\n",
+        "\n",
+        "    # Cross-Channel Price Comparison\n",
+        "    \"Is the price for Smoothie - ACAI ELIXIR the same in all channels?\",\n",
+        "]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "id": "37e1f73c",
       "metadata": {},
       "outputs": [
@@ -160,35 +195,6 @@
         }
       ],
       "source": [
-        "from src.chat import answer\n",
-        "\n",
-        "questions = [\n",
-        "    # Price Lookup\n",
-        "    \"What is the price of a small NUTTY BOWL?\",\n",
-        "    \"How much is the ACAI ELIXIR?\",\n",
-        "    \"How much is the GREEN BOWL Large?\",\n",
-        "\n",
-        "    # Nutrition Lookup\n",
-        "    \"How many calories does the GO GREEN smoothie have?\",\n",
-        "    \"Calories for Dragon Smoothie\",\n",
-        "\n",
-        "    # Category Listing\n",
-        "    \"Which salads do you have?\",\n",
-        "    \"What bowls are available?\",\n",
-        "    \"Show me smoothies\",\n",
-        "\n",
-        "    # Discount Listing\n",
-        "    \"What discounts are available?\",\n",
-        "    \"Which discounts include coupons?\",\n",
-        "\n",
-        "    # Discount Trigger Query\n",
-        "    \"What items trigger BOGO Any Smoothie discount?\",\n",
-        "\n",
-        "    # Cross-Channel Price Comparison\n",
-        "    \"Is the price for Smoothie - ACAI ELIXIR the same in all channels?\",\n",
-        "\n",
-        "]\n",
-        "\n",
         "for q in questions:\n",
         "    print(\"Q:\", q)\n",
         "    print(\"A:\", answer(q, index))\n",
@@ -261,7 +267,7 @@
         {
           "data": {
             "text/plain": [
-              "RouteResult(route=RouterOutput(intent='get_price', item='NUTTY BOWL', portion='small', category=None, discount=None, channel=None), meta=RouteMeta(router='llm', reason=None, model='gpt-4o-mini', error_type=None, error_message=None))"
+              "RouteResult(route=RouterOutput(intent='get_price', item='NUTTY BOWL', portion='small', category=None, discount=None, channel=None), meta=RouteMeta(router='llm', reason=None, model='gpt-4o-mini', error_type=None, error_message=None), raw_llm_output=None)"
             ]
           },
           "execution_count": 5,
@@ -397,7 +403,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "b3140dfa",
+      "id": "ad222a6e",
       "metadata": {},
       "outputs": [],
       "source": []
