--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "3154021d",
       "metadata": {},
       "outputs": [
@@ -230,17 +230,17 @@
       "source": [
         "import os\n",
         "\n",
+        "# If you want to provide a key manually (Colab), uncomment:\n",
+        "# os.environ[\"OPENAI_API_KEY\"] = \"PASTE_YOUR_KEY_HERE\"\n",
+        "\n",
         "key_present = bool(os.getenv(\"OPENAI_API_KEY\"))\n",
         "print(\"OPENAI_API_KEY present:\", key_present)\n",
         "\n",
         "if RUN_COLAB_SETUP and not key_present:\n",
         "    print(\n",
         "        \"\\nYou're in Colab mode and OPENAI_API_KEY isn't set.\\n\"\n",
-        "        \"Paste your key by uncommenting the line below.\\n\"\n",
+        "        \"Paste your key by uncommenting the line above.\\n\"\n",
         "    )\n",
-        "\n",
-        "# If you want to provide a key manually (Colab), uncomment:\n",
-        "# os.environ[\"OPENAI_API_KEY\"] = \"PASTE_YOUR_KEY_HERE\"\n",
         "\n",
         "# Optional: override router model\n",
         "# os.environ[\"OPENAI_MODEL\"] = \"gpt-4o-mini\"\n"
